--- a/all task/lovingIndonesiaClone/style.css
+++ b/all task/lovingIndonesiaClone/style.css
@@ -8,6 +8,14 @@
     src: url('./assets/SourceSansPro-Regular.woff') format('woff'); 
     
   }
+  @font-face {
+    font-family: 'SiteDes';
+    src: url('./assets/Montserrat-VariableFont_wght.ttf') format('truetype'); 
+    
+  }
+  html {
+	scroll-behavior: smooth;
+}
 
 *{
     margin: 0;
@@ -22,6 +30,38 @@ body {
     background-attachment: fixed;
     position: sticky;
     z-index: -5;
+    overflow-x: hidden;
+}
+#scroll {
+    position:fixed;
+    right:10px;
+    bottom:100px;
+    cursor:pointer;
+    width:40px;
+    height:40px;
+    background-color:#5b5b5b;
+    z-index: 100;
+    text-indent:-9999px;
+    display:none;
+    -webkit-border-radius:60px;
+    -moz-border-radius:60px;
+    border-radius:5px
+}
+#scroll span {
+    position:absolute;
+    top:50%;
+    left:50%;
+    margin-left:-8px;
+    margin-top:-12px;
+    height:0;
+    width:0;
+    border:8px solid transparent;
+    border-bottom-color:#ffffff;
+}
+#scroll:hover {
+    background-color:#060606;
+    opacity:1;filter:"alpha(opacity=100)";
+    -ms-filter:"alpha(opacity=100)";
 }
 
 .navigation_bar {
@@ -65,19 +105,22 @@ body {
     color: antiquewhite;
 }
 
-
+.elementor-shape-fill-header {
+    fill: #fff;
+   
+}
 
 .border {
     border: 2px solid;
 }
 
 .header_background {
-    min-height: 720px;
+  
     background-image: url("https://lovingindonesia.id/wp-content/uploads/2020/08/web-agency-bg1.jpg");
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
-    border-radius: 0 0 50% 50%;
+    
 }
 
 .hero {
@@ -95,14 +138,14 @@ body {
     text-align: center;
 }
 .heading_subheading {
-    font-size: 25px;
+    font-size: 22.4px;
     color: aliceblue;
 }
 .heading_button {
     background-color: rgb(255, 4, 234);
     padding: 15px 30px;
     color: aliceblue;
-    font-size: 20px;
+    font-size: 18px;
     border: 2px solid transparent;
     border-radius: 50px;
     font-weight: 800;
@@ -142,7 +185,7 @@ p {
     font-family: 'SiteFontReg',system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 .img_card{
-    
+    background-color: #fff;
     z-index: 30;
 }
 .card_section,.second_card_section {
@@ -172,25 +215,29 @@ p {
 .card_img {
     border-radius: 20px;
     margin-top: -15px;
+    width: 90vh;
 
 } 
 .second_text_card {
     background-color: #342562;
     color: aliceblue;
-    padding: 50px;
+    padding: 70px 60px;
     border-radius: 15px;
+    text-align: right;
     flex: 1;
     z-index: -1;
+ margin-right: -25px;
 }
 .second_img_card {
     flex: 1;
     z-index: 30;
+    width: 100%;
 }
 .google_ad_img {
-    height: 250px;
+    height: 275px;
     width: 100%;
     border-radius: 15px;
-    margin-left: -50px;
+    margin-left: -25px;
     margin-top: -30px;
    box-shadow: 0 2px 40px black;
    z-index: 10;
@@ -200,7 +247,7 @@ p {
     margin-bottom: 10px;
 }
 .footer {
- width: 100%;
+ width: 90vw;
  overflow: hidden;
 }
 .footer_two {
@@ -213,8 +260,8 @@ p {
     fill: #4C24CB;
     
 }
-svg {
-    margin-top: -9vw;
+.contain {
+    margin-top: -11vw;
     z-index: -5;
 }
 .footer_topbar {
@@ -277,7 +324,7 @@ svg {
 }
 .round_div {
     min-height: 250px;
-    background-color: rgb(255, 0, 251);
+    background-color: #E92E93;
     border-radius: 50% 50% 0 0;
     display: flex;
     justify-content: center;
@@ -287,6 +334,10 @@ svg {
     color: aliceblue;
     gap: 30px;
 }
+.backToTop_img {
+    width: 30px;
+}
+
 .top_footer_header_text {
    font-size: 20px;
    font-weight: 500;
@@ -296,18 +347,18 @@ svg {
     text-align: center;
 }
 .main_footer {
-    background-color: #1f1f1f;
+    background-color: #343638;
     min-height: 500px;
     color:aliceblue;
-    display: flex; /* Using flexbox */
+    display: flex; 
     flex-direction: column;
-    justify-content: center; /* Center content horizontally */
+    justify-content: center; 
   
     
 }
 .footer_thin {
     color: rgb(168, 168, 169);
-    font-family: 'SiteFontReg',system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  
 }
 .heading_subheading {
     text-align: center;
@@ -324,7 +375,11 @@ svg {
 .footer_info {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 40px;
+    font-family: 'SiteDes',sans-serif;
+}
+.footer_info__text, .footer_details,.footer_thin,.footer_copywrite {
+    font-family: 'SiteDes',sans-serif;
 }
 .backtotop {
     background-color: rgb(255, 192, 233);
@@ -342,21 +397,25 @@ svg {
     margin-top: 20px;
 }
 .google_partner_img {
-    width: 200px;
+    width: 300px;
+}
+.footer_icon {
+    font-size: 14px;
 }
 .addressbar {
     display: flex;
-    gap: 5px;
-    align-items: center;
-    text-align: center;
-    font-size: 30px;
+    gap: 15px;
+  
+    
+    font-size: 16px;
 }
 .footer_bottom {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 20px;
+    margin-top: 65px;
+    font-family: 'SiteDes',sans-serif;
 }
 .top_footer_header_text {
     margin-top: 60px;
@@ -364,17 +423,19 @@ svg {
 }
 
 @media only screen and (max-width: 1000px) {
-    svg {
+    .blue_svg {
         margin-top: 0;
     }
     .hero {
         padding-top: 20px;
     }
     .heading_top {
-        font-size: 10vw;
-    }
+        font-size: 124px;
+    font-weight: 900;
+    letter-spacing: -5px;
+    } 
     .heading_button {
-        margin-top: 0;
+        margin-top: 40px;
     }
     /* .round_div {
         border-radius: 0;
@@ -388,15 +449,22 @@ svg {
         
 
     }
+    .img_card {
+        border-radius: 60px;
+    }
     .card_img {
         margin: 10px 0;
-        width: 90vw;
+        width: 95vw;
         height: 250px;
+        border-radius: 20px;
     }
     .text_card {
-        margin: 15px;
-padding: 10px;
+        margin: -5px;
+padding: 30px 10px;
 overflow: hidden;
+border-radius: 0 0 15px 15px;
+text-align: center;
+
     }
     .second_card_section {
         flex-direction: column-reverse;
@@ -405,7 +473,7 @@ overflow: hidden;
         align-items: center;
     }
     .google_ad_img {
-        width: 90vw;
+       
         height: 100%;
         margin: 0;
         z-index: 30;
@@ -423,6 +491,17 @@ overflow: hidden;
     .heading_top_footer {
         font-size: 10vw;
     }
+    .heading_top {
+        font-size: 5rem;
+    }
+    .features {
+        flex-direction: column;
+    }
+    .second_text_card {
+        margin: 0;
+        
+    }
+  
 }
 @media only screen and (max-width: 900px) {
     .nav_container {
@@ -435,24 +514,23 @@ overflow: hidden;
     .right_nav {
         gap: 24px;
     }
-    
-    .heading_subheading {
-        font-size: 5vw;
+    @media only screen and (max-width: 400px){
+        .heading_top {
+            font-size: 50px;
+        }
+        #scroll {
+            right: 0;
+        }
+        
     }
-    .header_background {
-        min-height: 85vw;
-    }
-    .heading_button {
+   
+   
+    /* .heading_button {
         font-size: 4vw;
         padding: 5px 10px;
-    }
+    } */
     .features {
         justify-content: center;
     }
 
-}
-@media only screen and (max-width: 500px) {
-    .bottom_img {
-        display: none;
-    }
 }
