--- a/all task/ClippingUSAClone/style.css
+++ b/all task/ClippingUSAClone/style.css
@@ -10,6 +10,7 @@
     padding: 0;
     margin: 0;
     font-family: 'siteFont',Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    
 }
 .container {
     max-width: 1400px;
@@ -116,6 +117,7 @@
     text-transform: uppercase;
     background-color: #F26520;
     transition: all .5s;
+    width: fit-content;
 }
 .navbar__a:hover, .dropdown_a:hover {
     background-color: #484646;
@@ -127,6 +129,7 @@
     display: flex;
     justify-content: start;
     align-items: center;
+    flex-wrap: wrap;
 }
 /* Style the dropdown button */
 .dropdown  {
@@ -1176,4 +1179,9 @@ border-radius: 50%;
 .footer_bottom_2 {
   width: 37%;
   padding: 12px 0 ;
+}
+
+
+@media screen and (max-width: 991px) {
+
 }
